src/objects/FSTR__Queued_Step__c.object
<CustomObject>
    <description>Steps delayed for creation/insertion on a future date.</description>
    <fields>
        <fullName>Client_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Program Year</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Delayed Steps</relationshipLabel>
        <relationshipName>Delayed_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval_To_Create__c</fullName>
        <label>Approval To Create</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Callout_Data__c</fullName>
        <label>Callout Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Data__c</fullName>
        <label>Chatter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist_To_Create__c</fullName>
        <label>Checklist To Create</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Delayed Steps</relationshipLabel>
        <relationshipName>Delayed_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__DateToCreate__c</fullName>
        <label>Date to Create</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Message__c</fullName>
        <label>Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>Queued_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__ProcessRecordExt__c</fullName>
        <externalId>true</externalId>
        <label>Process Record Ext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RecordToCreateType__c</fullName>
        <label>RecordToCreateType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__RecordToCreate__c</fullName>
        <inlineHelpText>Serialized information to create when this Queued Step kicks off.</inlineHelpText>
        <label>RecordToCreate</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Assignment_Data__c</fullName>
        <label>Step Assignment Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Data__c</fullName>
        <label>Step Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Type__c</fullName>
        <formula>IF(FSTR__PCE_Step__r.FSTR__Email_Alert__c, &quot;Email Alert&quot;, IF(FSTR__PCE_Step__r.FSTR__Document_Merge__c, &quot;Document Merge&quot;, If( FSTR__PCE_Step__r.FSTR__Web_Service_Callout__c, &quot;Web Service Callout&quot;, IF(FSTR__PCE_Step__r.FSTR__Field_Update__c, &quot;Field Update&quot;,  FSTR__PCE_Step__r.FSTR__Object_Type_To_Create_Name__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Text_Data__c</fullName>
        <label>Text Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__TimeToCreate__c</fullName>
        <label>TimeToCreate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>DocumentMerge</fullName>
                </value>
                <value>
                    <fullName>SendGridEmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Delayed Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delayed Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>